Actualización de la configuración de iconos de la aplicación en múltiples plataformas, incluyendo cambios en las rutas de las imágenes y ajustes en los colores de fondo y tema. Se eliminaron archivos generados y temporales, y se mejoró el archivo .gitignore para incluir nuevas reglas. Además, se actualizó el archivo de dependencias de Flutter.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,14 +51,14 @@ flutter_launcher_icons:
   web:
     generate: true
     image_path: "lib/assets/logo.png"
-    background_color: "#hexcode"
-    theme_color: "#hexcode"
+    background_color: "#ffffff"
+    theme_color: "#2196F3"
   windows:
-    generate: false
+    generate: true
     image_path: "lib/assets/logo.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
-    generate: false
+    generate: true
     image_path: "lib/assets/logo.png"
 
 flutter_native_splash:
