--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,9 +1,9 @@
 # flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
-  image_path: "assets/icon/icon.png"
+  image_path: "lib/assets/logo.png"
 
   android: "launcher_icon"
-  # image_path_android: "assets/icon/icon.png"
+  # image_path_android: "lib/assets/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   # adaptive_icon_background: "assets/icon/background.png"
   # adaptive_icon_foreground: "assets/icon/foreground.png"
@@ -11,7 +11,7 @@ flutter_launcher_icons:
   # adaptive_icon_monochrome: "assets/icon/monochrome.png"
 
   ios: true
-  # image_path_ios: "assets/icon/icon.png"
+  # image_path_ios: "lib/assets/logo.png"
   remove_alpha_ios: true
   # image_path_ios_dark_transparent: "assets/icon/icon_dark.png"
   # image_path_ios_tinted_grayscale: "assets/icon/icon_tinted.png"
@@ -20,15 +20,15 @@ flutter_launcher_icons:
 
   web:
     generate: true
-    image_path: "path/to/image.png"
-    background_color: "#hexcode"
-    theme_color: "#hexcode"
+    image_path: "lib/assets/logo.png"
+    background_color: "#ffffff"
+    theme_color: "#2196F3"
 
   windows:
     generate: true
-    image_path: "path/to/image.png"
+    image_path: "lib/assets/logo.png"
     icon_size: 48 # min:48, max:256, default: 48
 
   macos:
     generate: true
-    image_path: "path/to/image.png"
+    image_path: "lib/assets/logo.png"
