--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,8 @@ yarn-error.log*
 
 # Environment files (local configs)
 /.env.*
+
+# Android signing keys (DO NOT COMMIT)
+/android/key.properties
+/android/*.jks
+/android/*.keystore
